@@ -952,14 +952,11 @@ You can also specify the additional arguments and keyword arguments using
 The argument list ``args`` and keyword dictionary ``kwargs`` are directly handed over to the
 ``myjobfunc`` during runtime.
 
-The :func:`~pypet.environment.Environment.f_run` will return a list of tuples of length **3**.
+The :func:`~pypet.environment.Environment.f_run` will return a list of tuples.
 Whereas the first tuple entry is the index of the corresponding run and the second entry
-of the tuple is the result returned by your run function, and the third entry is a dictionary
-with additional run information like runtime etc. The structure is equivalent to
-the dictionary returned by :func:`~pypet.trajectory.Trajectory.f_get_run_information`.
+of the tuple is the result returned by your run function.
 For the example above this would simply always be
-the string ``'fortytwo'``, i.e.
-``((0, 'fortytwo', {'name': ...}), (1, 'fortytwo', {'name': ...}),...)``.
+the string ``'fortytwo'``, i.e. ``((0, 'fortytwo'), (1, 'fortytwo'),...)``.
 In case you use multiprocessing these tuples are **not** in the order
 of the run indices but in the order of their finishing time!
 
@@ -1169,8 +1166,11 @@ You *cannot* change any HDF5 settings or even change the whole storage service.
 
 When does continuing not work?
 
-Continuing will **not** work if your top-level simulation function or the arguments passed to your
-simulation function are altered between individual runs. For instance, if you use multiprocessing
+Continuing does **not** work with ``'QUEUE'`` or ``'PIPE'`` wrapping in case of multiprocessing.
+
+Moreover, continuing will **not** work if your top-level simulation function
+or the arguments passed to your simulation function are altered between individual runs.
+For instance, if you use multiprocessing
 and you want to write computed data into a shared data list
 (like ``multiprocessing.Manager().list()``, see :ref:`example-12`),
 these changes will be lost and cannot be captured by the continue snapshots.
